force-app/main/default/objects/Channel_Partner__c/Channel_Partner__c.object-meta.xml
<CustomObject>
    <description>External broker/channel partner</description>
    <label>Channel Partner</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Channel Partner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>