force-app/main/default/objects/Channel_Partner__c/fields/Assigned_RM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned RM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RM Channel Partners</relationshipLabel>
    <relationshipName>RM_Channel_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>