force-app/main/default/objects/Channel_Partner__c/fields/Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Commission_Value__c</fullName>
    <label>Commission Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>