force-app/main/default/objects/Channel_Partner__c/fields/Doc_Verification__c.field-meta.xml
<CustomField>
    <fullName>Doc_Verification__c</fullName>
    <label>Document Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>