force-app/main/default/objects/Channel_Partner__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>